--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "crypto-js": "^3.1.9-1",
+    "mongodb-autoincrement": "^1.0.1",
     "mongoose": "^4.11.7",
     "nodemailer": "^4.0.1",
     "restify": "^5.1.0",
