feat: switch to dotenv  to store token

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "bunyan": "^1.8.12",
-    "co": "^4.6.0",
     "crypto-js": "^3.1.9-1",
+    "dotenv": "^8.2.0",
     "lodash": "^4.17.4",
     "mongodb-autoincrement": "^1.0.1",
     "mongoose": "^4.12.3",
